--- a/PlotBot.ipynb
+++ b/PlotBot.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Bot (@sentiment_bot34)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +52,13 @@
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
     "api = tweepy.API(auth, parser=tweepy.parsers.JSONParser())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function that pulls mentions and past posts from Twitter, then analyzes past posts of another user and posts findings"
    ]
   },
   {
@@ -135,7 +149,7 @@
     "    # Plot of sentiments\n",
     "        x_vals = sentiments_pd[\"Tweets Ago\"]\n",
     "        y_vals = sentiments_pd[\"Compound\"]\n",
-    "        plt.plot(x_vals, y_vals, marker=\"o\", linewidth=0.5, alpha=0.8)\n",
+    "        plt.plot(x_vals, y_vals, marker=\"o\", linewidth=0.5, alpha=0.8, color=\"blue\")\n",
     "        now = datetime.now()\n",
     "        now = now.strftime(\"%Y-%m-%d %H:%M\")\n",
     "        plt.title(\"Sentiment Analysis of Tweets \\n (\" + now + \") for \" + target_user)\n",
@@ -159,10 +173,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running function every 5 minutes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running function\n",
+      "Searching for mentions\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "AlexSchackmuth has already been analyzed\n",
+      "Skipping analysis on sentiment_bot34 itself\n",
+      "guardian has already been analyzed\n",
+      "nytpolitics has already been analyzed\n",
+      "nytimes has already been analyzed\n",
+      "NYTMetro has already been analyzed\n",
+      "Requested targets: []\n",
+      "Running function\n",
+      "Searching for mentions\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "Extracted search info\n",
+      "AlexSchackmuth has already been analyzed\n",
+      "Skipping analysis on sentiment_bot34 itself\n",
+      "guardian has already been analyzed\n",
+      "nytpolitics has already been analyzed\n",
+      "nytimes has already been analyzed\n",
+      "NYTMetro has already been analyzed\n",
+      "Requested targets: ['reneauberjonois', 'realGulDukat', 'BarackObama']\n",
+      "Beginning analysis\n",
+      "Creating dataframe\n",
+      "Plotting tweets\n",
+      "Posting to Twitter\n",
+      "Beginning analysis\n",
+      "Creating dataframe\n",
+      "Plotting tweets\n",
+      "Posting to Twitter\n",
+      "Beginning analysis\n",
+      "Creating dataframe\n",
+      "Plotting tweets\n",
+      "Posting to Twitter\n"
+     ]
+    }
+   ],
    "source": [
     "# Set timer to run every 5 minutes\n",
     "while(True):\n",
